conversion progressing